# arinc653_scheduler

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-run.yml
include/: Display.h  FlightControl.h  HealthMonitor.h  Partition.h  Scheduler.h
src/: Display.cpp  FlightControl.cpp  HealthMonitor.cpp  Scheduler.cpp  main.cpp
